--- a/css/index.css
+++ b/css/index.css
@@ -123,8 +123,9 @@
     flex-direction: column;
     line-height: 24px;
 }
-
-
+.off-screen-menu{
+    display: none;
+}
 
 
 @media (max-width: 575.98px) { 
@@ -132,8 +133,20 @@
     .header{
         display: none;
     }
+    .title{
+        display: flex;
+        flex-direction: column;
+    }
+    .intro{
+        width: 80%;
+        text-align: center;
+    }
+    .title img{
+        width: 100%;
+        height: 100%;
+    }
     .off-screen-menu{
-        background-color: rgb(74, 74, 78);
+        background: #e0eefc;
         height: 100vh;
         width: 100%;
         max-width: 450px;
@@ -147,8 +160,10 @@
         text-align: center;
         font-size: 3rem;
         transition: .3s ease;
-       
     }
+    .off-screen-menu a{
+        text-decoration: none;
+     }
     .off-screen-menu ul{
        padding-left: 0;
     }
@@ -158,7 +173,7 @@
     .top{
         padding: 1rem;
         display: flex;
-        background-color: rgb(171, 182, 222);
+        background: #e0eefc;
     }
     .ham-menu{
         height: 50px;
@@ -208,7 +223,121 @@
         margin-left: -5%;
     }
     .wish{
-        padding-top: 30%;
+        padding-top: 40%;
+        padding-bottom: 20%;
+        display: flex;
+        flex-direction: column;
+    }
+    .findApp{
+        display: flex;
+        flex-direction: column;
+        height: 120vh;
+    }
+    .wishman{
+        width: 50%;
+        height: 50%;
+    }
+    .card1 img{
+        width: 100%;
+    }
+}
+@media (max-width: 767.98px) { 
+   
+    .header{
+        display: none;
+    }
+    .title{
+        display: flex;
+        flex-direction: column;
+    }
+    .intro{
+        width: 80%;
+        text-align: center;
+    }
+    .title img{
+        width: 100%;
+        height: 100%;
+    }
+    .off-screen-menu{
+        background: #e0eefc;
+        height: 100vh;
+        width: 100%;
+        max-width: none;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 3rem;
+        transition: .3s ease;
+    }
+    .off-screen-menu a{
+        text-decoration: none;
+     }
+    .off-screen-menu ul{
+       padding-left: 0;
+    }
+    .off-screen-menu.active{
+        right: 0;
+        width: 100%;
+    }
+    .top{
+        padding: 1rem;
+        display: flex;
+        background: #e0eefc;
+    }
+    .ham-menu{
+        height: 50px;
+        width: 50px;
+        margin-left: auto;
+        position: relative;
+    }
+    .ham-menu span{
+        height: 5px;
+        width: 100%;
+        background-color: #6F86FF;
+        border-radius: 25px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        transition: .3s ease;
+    }
+    .ham-menu span:nth-child(1){
+        top: 25%;
+       
+    }
+    .ham-menu span:nth-child(3){
+        top: 75%;
+       
+    }
+
+
+    .ham-menu.active span:nth-child(1){
+        top: 50%;
+        transform: translate(-50%,-50%) rotate(45deg);
+        
+    }
+    .ham-menu.active span:nth-child(2){
+        opacity: 0;
+    }
+    .ham-menu.active span:nth-child(3){
+        top: 50%;
+        transform: translate(-50%,-50%) rotate(-45deg);
+    }
+
+
+    .featuredAppCard ul{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-left: -5%;
+    }
+    .wish{
+        padding-top: 40%;
         padding-bottom: 20%;
         display: flex;
         flex-direction: column;
