--- a/css/headerFooter.css
+++ b/css/headerFooter.css
@@ -26,3 +26,13 @@
     background: #e0eefc;
     
 }
+@media (max-width: 575.98px) {  
+    .header{
+       display: none;
+    }
+}
+@media (max-width: 767.98px) { 
+    .header{
+        display: none;
+    }
+}
