--- a/css/lovefood.css
+++ b/css/lovefood.css
@@ -173,3 +173,192 @@
     height: 1px;
     background: #bab1b1;
 }
+.off-screen-menu{
+    display: none;
+}
+
+@media (max-width: 575.98px) { 
+   
+    .header{
+        display: none;
+    }
+    .wrap{
+        display: flex;
+        flex-direction: column;
+    }
+    .wrapText{
+        width: 100%;
+        text-align: center;
+    }
+    .intro{
+        text-align: center;
+    }
+    .capacity{
+        left: 0;
+    }
+    .age h1{
+        left: 0;
+    }
+    .developer h1{
+        left: 0;
+    }
+    .addComment{
+        text-align: center;
+        margin: 0;
+    }
+    
+    .off-screen-menu{
+        background: #e0eefc;
+        height: 100vh;
+        width: 100%;
+        max-width: 450px;
+        position: fixed;
+        top: 0;
+        right: -450px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 3rem;
+        transition: .3s ease;
+        z-index: 6000;
+    }
+    .off-screen-menu a{
+        text-decoration: none;
+     }
+    .off-screen-menu ul{
+       padding-left: 0;
+    }
+    .off-screen-menu.active{
+        right: 0;
+    }
+    .top{
+        padding: 1rem;
+        display: flex;
+        background: #e0eefc;
+    }
+    .ham-menu{
+        height: 50px;
+        width: 50px;
+        margin-left: auto;
+        position: relative;
+    }
+    .ham-menu span{
+        height: 5px;
+        width: 100%;
+        background-color: #6F86FF;
+        border-radius: 25px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        transition: .3s ease;
+    }
+    .ham-menu span:nth-child(1){
+        top: 25%;
+        z-index: 6000;
+    }
+    .ham-menu span:nth-child(3){
+        top: 75%;
+        z-index: 6000;
+    }
+
+
+    .ham-menu.active span:nth-child(1){
+        top: 50%;
+        transform: translate(-50%,-50%) rotate(45deg);
+        
+    }
+    .ham-menu.active span:nth-child(2){
+        opacity: 0;
+    }
+    .ham-menu.active span:nth-child(3){
+        top: 50%;
+        transform: translate(-50%,-50%) rotate(-45deg);
+    }
+
+
+
+}
+@media (max-width: 767.98px) { 
+   
+    .header{
+        display: none;
+    }
+  
+    .off-screen-menu{
+        background: #e0eefc;
+        height: 100vh;
+        width: 100%;
+        max-width: none;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 3rem;
+        transition: .3s ease;
+        z-index: 6000;
+    }
+    .off-screen-menu a{
+        text-decoration: none;
+     }
+    .off-screen-menu ul{
+       padding-left: 0;
+    }
+    .off-screen-menu.active{
+        right: 0;
+        width: 100%;
+    }
+    .top{
+        padding: 1rem;
+        display: flex;
+        background: #e0eefc;
+    }
+    .ham-menu{
+        height: 50px;
+        width: 50px;
+        margin-left: auto;
+        position: relative;
+    }
+    .ham-menu span{
+        height: 5px;
+        width: 100%;
+        background-color: #6F86FF;
+        border-radius: 25px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        transition: .3s ease;
+    }
+    .ham-menu span:nth-child(1){
+        top: 25%;
+        z-index: 6000;
+    }
+    .ham-menu span:nth-child(3){
+        top: 75%;
+        z-index: 6000;
+    }
+
+
+    .ham-menu.active span:nth-child(1){
+        top: 50%;
+        transform: translate(-50%,-50%) rotate(45deg);
+        
+    }
+    .ham-menu.active span:nth-child(2){
+        opacity: 0;
+    }
+    .ham-menu.active span:nth-child(3){
+        top: 50%;
+        transform: translate(-50%,-50%) rotate(-45deg);
+    }
+
+
+  
+}
